--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -19,12 +19,12 @@
             <span class="boardTitles board-title" th:onclick="clickView([[${boardList.id}]])" th:text="${boardList.title}" th:attr="data-id=${boardList.id}"></span>
         </h3>
     </ul>
-    <div class="a">1</div>
+    <!--<div class="a">1</div>
     <div class="b">2</div>
     <div class="a b">3</div>
 
     1, 3 = document.getElementsByClassName('a')
-    2, 3 = document.getElementsByClassName('b')
+    2, 3 = document.getElementsByClassName('b')-->
     <!-- Bootstrap Modal -->
     <div class="modal fade" id="boardModal" tabindex="-1" role="dialog" aria-labelledby="boardModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
